--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Custom cursor</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-<h1>Hello world!</h1>
+<h1 class="test">Custom cursor</h1>
 
+<script src="assets/js/gsap.js"></script>
+<script src="assets/js/custom-cursor.js"></script>
 <script src="assets/js/script.js"></script>
 </body>
 </html>
