--- a/examples/index.html
+++ b/examples/index.html
@@ -3,23 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom cursor</title>
+    <title>Cursorism</title>
+    <link rel="icon" type="image/x-icon" href="unicorn.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="container">
-    <h1 class="test">Custom cursor</h1>
-    <p>Vitae rutrum mus consequat vel auctor. Orci proin est vivamus adipiscing magna faucibus per phasellus pulvinar.
-        Tempor letius iaculis feugiat eros erat. Dignissim in laoreet libero aptent ullamcorper magna commodo
-        suspendisse.
-        Egestas commodo integer orci pulvinar class habitant vehicula sociosqu lectus porta magna. Porttitor gravida
-        habitant facilisi erat himenaeos consectetuer vivamus maximus interdum euismod.</p>
+    <h1>Cursorism</h1>
+    <p>🦄 Customize mouse cursor with GreenSock animation</p>
+    <p>Cursorism is a light-weight JavaScript library which provides the ability to transform your cursor(s) based on
+        events. Special thanks to <a href="https://greensock.com/" target="_blank">GreenSock</a> for the smoothness.</p>
+    <p>In this page, you're seeing the default cursor style that achieves by running:</p>
+    <code>new CustomCursor();</code>
+    <p>More styles below:</p>
+    <ul>
+        <li><a href="/ipad">iPad cursor</a></li>
+        <li><a href="/inner-dot">Circle with inner dot</a></li>
+    </ul>
 </div>
 
+<footer>
+    <p>
+        <a href="/">
+            <img src="https://badgen.net/badge/🦄/home?scale=1.2" alt="github">
+        </a>
+        <a href="https://github.com/phucbm/cursorism">
+            <img src="https://badgen.net/badge/icon/cursorism?icon=github&label=github&scale=1.2" alt="github">
+        </a>
+        <a href="https://greensock.com/" target="_blank">
+            <img src="https://badgen.net/badge/dependency/greensock/61AC27?scale=1.2" alt="greensock">
+        </a>
+    </p>
+</footer>
 
 <script src="../src/custom-cursor.js"></script>
 <script src="../src/gsap.js"></script>
