new(example): inverted color

--- a/examples/index.html
+++ b/examples/index.html
@@ -23,6 +23,7 @@
     <ul>
         <li><a href="/ipad">iPad cursor</a></li>
         <li><a href="/inner-dot">Circle with inner dot</a></li>
+        <li><a href="/inverted-color">Inverted color</a></li>
     </ul>
 </div>
 
