--- a/examples/inner-dot/index.html
+++ b/examples/inner-dot/index.html
@@ -50,15 +50,12 @@
         habitant facilisi erat himenaeos consectetuer vivamus maximus interdum euismod.</p>
     <ul>
         <li>Ex si scelerisque molestie penatibus cursus dictumst suscipit curae nam. Magna sed commodo eget potenti non
-            congue velit placerat mus metus tellus. Ultrices felis class tellus in netus accumsan si magnis curabitur
-            vivamus.
+            congue velit placerat mus metus tellus.
         </li>
-        <li>Facilisis laoreet arcu taciti quam dignissim adipiscing. Magnis dictumst odio fames elementum torquent class
-            ipsum pulvinar volutpat.
+        <li>Facilisis laoreet arcu taciti quam dignissim adipiscing.
         </li>
         <li>Risus tristique metus pretium vitae amet nam. Euismod curabitur enim sagittis volutpat quisque non integer
-            consectetuer turpis platea cras. Magna nullam sapien odio dolor taciti accumsan efficitur libero porttitor
-            vulputate.
+            consectetuer turpis platea cras.
         </li>
     </ul>
     <!-- Flickity HTML init -->
@@ -101,7 +98,8 @@
     const flkty = new Flickity('.carousel', {
         cellAlign: 'left',
         contain: true,
-        groupCells: '100%'
+        groupCells: '100%',
+        wrapAround: true
     });
 
     // init Cursorism
