--- a/examples/ipad/index.html
+++ b/examples/ipad/index.html
@@ -18,25 +18,14 @@
     <p>Vitae rutrum mus consequat <a href="#">vel auctor</a>. Orci proin est vivamus adipiscing magna faucibus per
         phasellus pulvinar.
         Tempor letius iaculis feugiat eros erat. Dignissim in laoreet libero aptent ullamcorper magna commodo
-        suspendisse.
-        Egestas commodo integer orci pulvinar class habitant <a href="#">vehicula sociosqu</a> lectus porta magna.
-        Porttitor
-        gravida
-        habitant facilisi erat himenaeos consectetuer vivamus maximus interdum euismod.</p>
-    <ul>
-        <li>Ex si scelerisque molestie penatibus cursus dictumst suscipit curae nam. Magna sed commodo eget potenti non
-            congue velit placerat mus metus tellus.
-        </li>
-        <li>Facilisis laoreet arcu taciti quam dignissim adipiscing.
-        </li>
-        <li>Risus tristique metus pretium vitae amet nam. Euismod curabitur enim sagittis volutpat quisque non integer
-            consectetuer turpis platea cras.
-        </li>
-    </ul>
-    <p style="text-align:center">
+        suspendisse.</p>
+    <div class="image">
+        <img src="https://picsum.photos/768/432?random=2">
+    </div>
+    <p>Egestas commodo integer orci pulvinar class habitant <a href="#">vehicula sociosqu</a> lectus porta magna.</p>
+    <p>
         <a class="btn" href="#">Button 1</a>
         <a class="btn" href="#">Button 2</a>
-        <a class="btn" href="#">Button 3</a>
     </p>
 </main>
 
@@ -67,7 +56,7 @@
         hover: [
             // text edit
             {
-                selector: 'p, li',
+                selector: 'main p',
                 in: {
                     borderRadius: 0,
                     boxShadow: 'none',
