--- a/examples/ipad/index.html
+++ b/examples/ipad/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursorism ~ iPad</title>
+    <title>Cursor.js ~ iPad style</title>
     <link rel="icon" type="image/x-icon" href="../unicorn.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 
 
 <main class="container">
-    <h1 class="test">🦄 Cursorism ~ iPad</h1>
+    <h1 class="test">🦄 Cursor.js ~ iPad style</h1>
     <p>Vitae rutrum mus consequat <a href="#">vel auctor</a>. Orci proin est vivamus adipiscing magna faucibus per
         phasellus pulvinar.
         Tempor letius iaculis feugiat eros erat. Dignissim in laoreet libero aptent ullamcorper magna commodo
@@ -32,15 +32,20 @@
 <footer>
     <p>
         <a href="/">
-            <img src="https://badgen.net/badge/🦄/home?scale=1.2" alt="github">
+            <img src="https://badgen.net/badge/🦄/home?scale=1.2" alt="home">
         </a>
         <a href="https://github.com/phucbm/cursorism">
-            <img src="https://badgen.net/badge/icon/cursorism?icon=github&label=github&scale=1.2" alt="github">
+            <img src="https://badgen.net/badge/icon/Cursor.js?icon=github&label=github&color=6495ED&scale=1.2"
+                 alt="github">
         </a>
         <a href="https://greensock.com/" target="_blank">
-            <img src="https://badgen.net/badge/dependency/greensock/61AC27?scale=1.2" alt="greensock">
+            <img src="https://badgen.net/badge/thanks to/GreenSock 💪/61AC27?scale=1.2" alt="greensock">
+        </a>
+        <a href="https://github.com/phucbm" target="_blank">
+            <img src="https://badgen.net/badge/made with 🧡 by/phucbm/6495ED?scale=1.2" alt="phucbm">
         </a>
     </p>
+
 </footer>
 
 <script src="../../src/custom-cursor.js"></script>
