--- a/examples/css-blended-color/index.html
+++ b/examples/css-blended-color/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursorism ~ CSS Blended Color</title>
+    <title>Cursor.js ~ CSS Blended Color</title>
     <link rel="icon" type="image/x-icon" href="../unicorn.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 
 
 <main class="container">
-    <h1 class="test">🦄 Cursorism ~ CSS Blended Color</h1>
+    <h1 class="test">🦄 Cursor.js ~ CSS Blended Color</h1>
     <p>Vitae rutrum mus consequat <a href="#">vel auctor</a>. Orci proin est vivamus adipiscing magna faucibus per
         phasellus pulvinar.
         Tempor letius iaculis feugiat eros erat. Dignissim in laoreet libero aptent ullamcorper magna commodo
@@ -36,22 +36,27 @@
 <footer>
     <p>
         <a href="/">
-            <img src="https://badgen.net/badge/🦄/home?scale=1.2" alt="github">
+            <img src="https://badgen.net/badge/🦄/home?scale=1.2" alt="home">
         </a>
         <a href="https://github.com/phucbm/cursorism">
-            <img src="https://badgen.net/badge/icon/cursorism?icon=github&label=github&scale=1.2" alt="github">
+            <img src="https://badgen.net/badge/icon/Cursor.js?icon=github&label=github&color=6495ED&scale=1.2"
+                 alt="github">
         </a>
         <a href="https://greensock.com/" target="_blank">
-            <img src="https://badgen.net/badge/dependency/greensock/61AC27?scale=1.2" alt="greensock">
+            <img src="https://badgen.net/badge/thanks to/GreenSock 💪/61AC27?scale=1.2" alt="greensock">
+        </a>
+        <a href="https://github.com/phucbm" target="_blank">
+            <img src="https://badgen.net/badge/made with 🧡 by/phucbm/6495ED?scale=1.2" alt="phucbm">
         </a>
     </p>
+
 </footer>
 
 <script src="../../src/dat.gui.min.js"></script>
 <script src="../../src/custom-cursor.js"></script>
 <script src="../../src/gsap.js"></script>
 <script>
-    // init Cursorism
+    // init Cursor.js
     const config = {
         speed: .2,
         style: {
@@ -72,7 +77,7 @@
         size: 60,
         mixBlendMode: config.style.mixBlendMode
     };
-    const gui = new dat.GUI({name: 'Cursorism', width: 300, useLocalStorage: true});
+    const gui = new dat.GUI({name: 'Cursor.js', width: 300, useLocalStorage: true});
     const update = () => {
         const color = `rgba(${guiValue.bgColor[0]},${guiValue.bgColor[1]},${guiValue.bgColor[2]},${guiValue.opacity})`;
         cursor.update({
