--- a/examples/index.html
+++ b/examples/index.html
@@ -18,7 +18,7 @@
         targets. This library relies on <a href="https://greensock.com/" target="_blank">GreenSock</a> to handle the
         frame update and animation.</p>
     <p>In this page, you're seeing the default cursor style that achieves by running:</p>
-    <code>new CustomCursor();</code>
+    <code>new Cursor();</code>
     <p>Plus, you can adjust the cursor directly from the panel in the top right corner of this page ↗️</p>
     <p>And here's some more style that I've made:</p>
     <ul>
@@ -48,11 +48,11 @@
 </footer>
 
 <script src="../src/dat.gui.min.js"></script>
-<script src="../src/custom-cursor.js"></script>
+<script src="../src/cursor.js"></script>
 <script src="../src/gsap.js"></script>
 <script>
     // init Cursor.js
-    const cursor = new CustomCursor();
+    const cursor = new Cursor();
 
     // GUI
     const config = {
