--- a/examples/ipad/index.html
+++ b/examples/ipad/index.html
@@ -48,10 +48,10 @@
 
 </footer>
 
-<script src="../../src/custom-cursor.js"></script>
+<script src="../../src/cursor.js"></script>
 <script src="../../src/gsap.js"></script>
 <script>
-    new CustomCursor({
+    new Cursor({
         style: {
             width: '23px',
             height: '23px',
