--- a/examples/css-blended-color/index.html
+++ b/examples/css-blended-color/index.html
@@ -53,7 +53,7 @@
 </footer>
 
 <script src="../../src/dat.gui.min.js"></script>
-<script src="../../src/custom-cursor.js"></script>
+<script src="../../src/cursor.js"></script>
 <script src="../../src/gsap.js"></script>
 <script>
     // init Cursor.js
@@ -66,7 +66,7 @@
             mixBlendMode: 'difference'
         }
     };
-    const cursor = new CustomCursor(config);
+    const cursor = new Cursor(config);
 
 
     // GUI
