--- a/examples/index.html
+++ b/examples/index.html
@@ -20,7 +20,7 @@
     <p>In this page, you're seeing the default cursor style that achieves by running:</p>
     <code>new Cursor();</code>
     <p>Plus, you can adjust the cursor directly from the panel in the top right corner of this page ↗️</p>
-    <p>And here's some more style that I've made:</p>
+    <p>Check out some more styles:</p>
     <ul>
         <li><a href="/ipad">iPad style</a></li>
         <li><a href="/ring">Ring style</a></li>
