--- a/web/index.html
+++ b/web/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Webpack Library Boilerplate</title>
 </head>
 
 <body>
-<div id="root">
+<div class="container">
+
+    <h1 data-title>Webpack Library Boilerplate</h1>
+    <p data-description></p>
+
 </div>
 </body>
 
