build: update package.json

--- a/dev/index.html
+++ b/dev/index.html
@@ -37,7 +37,7 @@
 
         <h2 class="heading-separator"><span>Image</span></h2>
 
-        <div class="cursor-image img-wrapper-cover">
+        <div class="cursor-image img-wrapper-cover skeleton-bg">
             <img src="https://picsum.photos/1280/768" alt="image">
         </div>
 
